src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__option__tests__concat_idents! (parse it_matches_only).snap
---
source: src/type_atoms/adt/option.rs
expression: "crate::parse::<Option<Ident>>(q.clone())"
---
Ok(
    None,
)
