src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__option__tests__concat_idents! (parse it_returns_the_correct_length).snap
---
source: src/type_atoms/adt/option.rs
expression: "crate::parse::<Option<(Ident, Ident)>>(q.clone())"
---
Ok(
    None,
)
