src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__option__tests__concat_idents! (peek it_matches_only).snap
---
source: src/type_atoms/adt/option.rs
expression: "crate::test_peek::<Option<Ident>>(q.clone())"
---
Some(
    0,
)
