src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__option__tests__concat_idents! (peek it_returns_the_correct_length).snap
---
source: src/type_atoms/adt/option.rs
expression: "crate::test_peek::<P<Option<P<(Ident, Ident)>>>>(q.clone())"
---
Some(
    0,
)
