src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__option__tests__it_matches_only.snap
---
source: src/type_atoms/adt/option.rs
expression: "(insta_match_test!(+ parse Option<Ident> : <),\n    insta_match_test!(* peek Option<Ident> : <))"
---
(
    Ok(
        None,
    ),
    Some(
        0,
    ),
)
