src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__option__tests__it_returns_the_correct_length.snap
---
source: src/type_atoms/adt/option.rs
expression: "(insta_match_test!(+ parse Option<(Ident, Ident)> : hi <),\n    insta_match_test!(* peek Option<(Ident, Ident)> : hi <))"
---
(
    Ok(
        None,
    ),
    Some(
        0,
    ),
)
